// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox select with no props snapshot 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v5-c-menu-toggle"
    style="width: 200px;"
    type="button"
  >
    <span
      class="pf-v5-c-menu-toggle__text"
    >
      Filter by status
    </span>
    <span
      class="pf-v5-c-menu-toggle__controls"
    >
      <span
        class="pf-v5-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`opened checkbox select snapshot 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    class="pf-v5-c-menu-toggle pf-m-expanded"
    style="width: 200px;"
    type="button"
  >
    <span
      class="pf-v5-c-menu-toggle__text"
    >
      Filter by status
    </span>
    <span
      class="pf-v5-c-menu-toggle__controls"
    >
      <span
        class="pf-v5-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </span>
  </button>
  <div
    class="pf-v5-c-menu"
    data-ouia-component-id="OUIA-Generated-Select-3"
    data-ouia-component-type="PF5/Select"
    data-ouia-safe="true"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    id="checkbox-select"
    style="position: absolute; left: 0px; top: 0px; z-index: 9999; opacity: 1; transition: opacity 0ms cubic-bezier(.54, 1.5, .38, 1.11); min-width: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="pf-v5-c-menu__content"
    >
      <ul
        class="pf-v5-c-menu__list"
        role="menu"
      >
        <li
          class="pf-v5-c-menu__list-item"
          role="menuitem"
        >
          <label
            class="pf-v5-c-menu__item"
            for="generated-id"
            tabindex="-1"
          >
            <span
              class="pf-v5-c-menu__item-main"
            >
              <span
                class="pf-v5-c-menu__item-check"
              >
                <span
                  class="pf-v5-c-check pf-m-standalone"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="pf-v5-c-check__input"
                    data-ouia-component-id="OUIA-Generated-Checkbox-1"
                    data-ouia-component-type="PF5/Checkbox"
                    data-ouia-safe="true"
                    id="generated-id"
                    type="checkbox"
                  />
                </span>
              </span>
              <span
                class="pf-v5-c-menu__item-text"
              >
                Option 1
              </span>
            </span>
          </label>
        </li>
        <li
          class="pf-v5-c-menu__list-item"
          role="menuitem"
        >
          <label
            class="pf-v5-c-menu__item"
            for="generated-id"
            tabindex="-1"
          >
            <span
              class="pf-v5-c-menu__item-main"
            >
              <span
                class="pf-v5-c-menu__item-check"
              >
                <span
                  class="pf-v5-c-check pf-m-standalone"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="pf-v5-c-check__input"
                    data-ouia-component-id="OUIA-Generated-Checkbox-2"
                    data-ouia-component-type="PF5/Checkbox"
                    data-ouia-safe="true"
                    id="generated-id"
                    type="checkbox"
                  />
                </span>
              </span>
              <span
                class="pf-v5-c-menu__item-text"
              >
                Option 2
              </span>
            </span>
          </label>
        </li>
        <li
          class="pf-v5-c-menu__list-item"
          role="menuitem"
        >
          <label
            class="pf-v5-c-menu__item"
            for="generated-id"
            tabindex="-1"
          >
            <span
              class="pf-v5-c-menu__item-main"
            >
              <span
                class="pf-v5-c-menu__item-check"
              >
                <span
                  class="pf-v5-c-check pf-m-standalone"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="pf-v5-c-check__input"
                    data-ouia-component-id="OUIA-Generated-Checkbox-3"
                    data-ouia-component-type="PF5/Checkbox"
                    data-ouia-safe="true"
                    id="generated-id"
                    type="checkbox"
                  />
                </span>
              </span>
              <span
                class="pf-v5-c-menu__item-text"
              >
                Option 3
              </span>
            </span>
          </label>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
